<resources>
    <string name="app_name">CryptoApp</string>
    <string name="coinName_currnecy">%s / %s</string>
    <string name="last_time_update">Время последнего обновления: %s</string>
    <string name="slash">/</string>
    <string name="price">Цена:</string>
    <string name="max_by_day">Максимум за день:</string>
    <string name="min_by_day">Минимум за день:</string>
    <string name="last_deal">Последняя сделка:</string>
    <string name="last_update">Обновлено:</string>
</resources>